finished the training part

--- a/Notebooks/lira_attack/train_model.ipynb
+++ b/Notebooks/lira_attack/train_model.ipynb
@@ -12,7 +12,7 @@
     "import time\n",
     "\n",
     "# Navigate to the parent directory of the project structure\n",
-    "project_dir = os.path.abspath(os.path.join(os.getcwd(), '../'))\n",
+    "project_dir = os.path.abspath(os.path.join(os.getcwd(), '../../'))\n",
     "src_dir = os.path.join(project_dir, 'src')\n",
     "data_dir = os.path.join(project_dir, 'data')\n",
     "fig_dir = os.path.join(project_dir, 'fig')\n",
@@ -37,10 +37,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-05 11:25:05.381325: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2026-01-05 11:25:05.437148: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2026-01-05 18:20:31.959953: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2026-01-05 18:20:32.016387: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2026-01-05 11:25:06.230247: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2026-01-05 18:20:32.815058: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/tmp/python-venv/lra_venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
@@ -49,8 +49,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting run 0 that did not complete.\n",
-      "Creating experiment directory: /storage/coda1/p-vzikas3/0/ywei368/Yu-Project/Auditing/lira_attack/logs/exp/cifar10/experiment-0_2\n"
+      "Deleting run 3 that did not complete.\n",
+      "Creating experiment directory: /storage/coda1/p-vzikas3/0/ywei368/Yu-Project/Auditing/lira_attack/logs/exp/cifar10/experiment-3_16\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
     "arch = 'wrn28-2'\n",
     "\n",
     "# Training configuration\n",
-    "epochs = 2\n",
+    "epochs = 100\n",
     "save_steps = 20\n",
     "batch = 256\n",
     "lr = 0.1\n",
@@ -110,14 +110,14 @@
     "pkeep = 0.5\n",
     "\n",
     "# Experiment configuration\n",
-    "expid = 0\n",
-    "num_experiments = 2\n",
+    "expid = 3\n",
+    "num_experiments = 16\n",
     "seed = None  # Will be auto-generated if None\n",
     "\n",
     "# Optional parameters\n",
     "only_subset = None\n",
     "patience = None\n",
-    "dataset_size = 1024\n",
+    "dataset_size = 50000\n",
     "eval_steps = 1\n",
     "tunename = False\n",
     "\n",
@@ -164,27 +164,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bf02737c",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "--------------------------------------------------------------------------------\n",
       "No checkpoints found. Skipping restoring variables.\n",
-      "Epoch 0001  Loss 2.37  Accuracy 8.93\n",
-      "Epoch 0002  Loss 2.20  Accuracy 14.52\n",
-      "--------------------------------------------------------------------------------\n",
-      "✅ Training completed! Results saved to /storage/coda1/p-vzikas3/0/ywei368/Yu-Project/Auditing/lira_attack/logs/exp/cifar10/experiment-0_2\n"
+      "Epoch 0001  Loss 1.84  Accuracy 20.87\n",
+      "Epoch 0002  Loss 1.35  Accuracy 27.72\n",
+      "Epoch 0003  Loss 1.07  Accuracy 41.02\n",
+      "Epoch 0004  Loss 0.94  Accuracy 51.19\n",
+      "Epoch 0005  Loss 0.83  Accuracy 58.73\n",
+      "Epoch 0006  Loss 0.74  Accuracy 63.18\n",
+      "Epoch 0007  Loss 0.68  Accuracy 66.55\n",
+      "Epoch 0008  Loss 0.63  Accuracy 69.64\n",
+      "Epoch 0009  Loss 0.59  Accuracy 71.63\n",
+      "Epoch 0010  Loss 0.56  Accuracy 73.72\n",
+      "Epoch 0011  Loss 0.51  Accuracy 75.35\n",
+      "Epoch 0012  Loss 0.49  Accuracy 76.94\n",
+      "Epoch 0013  Loss 0.48  Accuracy 78.18\n",
+      "Epoch 0014  Loss 0.44  Accuracy 79.42\n",
+      "Epoch 0015  Loss 0.45  Accuracy 80.21\n",
+      "Epoch 0016  Loss 0.42  Accuracy 81.26\n",
+      "Epoch 0017  Loss 0.41  Accuracy 82.10\n",
+      "Epoch 0018  Loss 0.39  Accuracy 82.94\n",
+      "Epoch 0019  Loss 0.38  Accuracy 83.74\n",
+      "Epoch 0020  Loss 0.37  Accuracy 84.37\n",
+      "Epoch 0021  Loss 0.35  Accuracy 84.89\n",
+      "Epoch 0022  Loss 0.34  Accuracy 85.43\n",
+      "Epoch 0023  Loss 0.34  Accuracy 85.86\n",
+      "Epoch 0024  Loss 0.33  Accuracy 86.41\n",
+      "Epoch 0025  Loss 0.31  Accuracy 86.70\n",
+      "Epoch 0026  Loss 0.30  Accuracy 87.13\n",
+      "Epoch 0027  Loss 0.31  Accuracy 87.41\n",
+      "Epoch 0028  Loss 0.30  Accuracy 87.76\n",
+      "Epoch 0029  Loss 0.28  Accuracy 87.99\n",
+      "Epoch 0030  Loss 0.28  Accuracy 88.21\n",
+      "Epoch 0031  Loss 0.27  Accuracy 88.39\n",
+      "Epoch 0032  Loss 0.27  Accuracy 88.63\n",
+      "Epoch 0033  Loss 0.25  Accuracy 88.96\n",
+      "Epoch 0034  Loss 0.26  Accuracy 89.05\n",
+      "Epoch 0035  Loss 0.25  Accuracy 89.27\n",
+      "Epoch 0036  Loss 0.25  Accuracy 89.33\n",
+      "Epoch 0037  Loss 0.24  Accuracy 89.56\n",
+      "Epoch 0038  Loss 0.23  Accuracy 89.71\n",
+      "Epoch 0039  Loss 0.23  Accuracy 89.83\n",
+      "Epoch 0040  Loss 0.23  Accuracy 89.89\n",
+      "Epoch 0041  Loss 0.23  Accuracy 90.02\n",
+      "Epoch 0042  Loss 0.22  Accuracy 90.17\n",
+      "Epoch 0043  Loss 0.22  Accuracy 90.35\n",
+      "Epoch 0044  Loss 0.20  Accuracy 90.37\n",
+      "Epoch 0045  Loss 0.20  Accuracy 90.48\n",
+      "Epoch 0046  Loss 0.20  Accuracy 90.48\n",
+      "Epoch 0047  Loss 0.19  Accuracy 90.55\n",
+      "Epoch 0048  Loss 0.19  Accuracy 90.64\n",
+      "Epoch 0049  Loss 0.18  Accuracy 90.68\n",
+      "Epoch 0050  Loss 0.19  Accuracy 90.68\n",
+      "Epoch 0051  Loss 0.18  Accuracy 90.72\n",
+      "Epoch 0052  Loss 0.18  Accuracy 90.82\n",
+      "Epoch 0053  Loss 0.17  Accuracy 90.97\n",
+      "Epoch 0054  Loss 0.17  Accuracy 90.99\n",
+      "Epoch 0055  Loss 0.17  Accuracy 90.98\n"
      ]
     }
    ],
@@ -243,6 +287,18 @@
    "display_name": "Python (lra-env)",
    "language": "python",
    "name": "lra-env"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.25"
   }
  },
  "nbformat": 4,
