finish the training part

--- a/Notebooks/lira_attack/train_model.ipynb
+++ b/Notebooks/lira_attack/train_model.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bf02737c",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,54 @@
       "Epoch 0052  Loss 0.18  Accuracy 90.82\n",
       "Epoch 0053  Loss 0.17  Accuracy 90.97\n",
       "Epoch 0054  Loss 0.17  Accuracy 90.99\n",
-      "Epoch 0055  Loss 0.17  Accuracy 90.98\n"
+      "Epoch 0055  Loss 0.17  Accuracy 90.98\n",
+      "Epoch 0056  Loss 0.17  Accuracy 91.06\n",
+      "Epoch 0057  Loss 0.16  Accuracy 91.11\n",
+      "Epoch 0058  Loss 0.16  Accuracy 91.06\n",
+      "Epoch 0059  Loss 0.15  Accuracy 91.14\n",
+      "Epoch 0060  Loss 0.15  Accuracy 91.18\n",
+      "Epoch 0061  Loss 0.15  Accuracy 91.26\n",
+      "Epoch 0062  Loss 0.15  Accuracy 91.32\n",
+      "Epoch 0063  Loss 0.13  Accuracy 91.30\n",
+      "Epoch 0064  Loss 0.13  Accuracy 91.25\n",
+      "Epoch 0065  Loss 0.13  Accuracy 91.22\n",
+      "Epoch 0066  Loss 0.13  Accuracy 91.26\n",
+      "Epoch 0067  Loss 0.12  Accuracy 91.26\n",
+      "Epoch 0068  Loss 0.12  Accuracy 91.32\n",
+      "Epoch 0069  Loss 0.12  Accuracy 91.44\n",
+      "Epoch 0070  Loss 0.10  Accuracy 91.48\n",
+      "Epoch 0071  Loss 0.12  Accuracy 91.52\n",
+      "Epoch 0072  Loss 0.10  Accuracy 91.61\n",
+      "Epoch 0073  Loss 0.11  Accuracy 91.57\n",
+      "Epoch 0074  Loss 0.10  Accuracy 91.60\n",
+      "Epoch 0075  Loss 0.09  Accuracy 91.70\n",
+      "Epoch 0076  Loss 0.10  Accuracy 91.65\n",
+      "Epoch 0077  Loss 0.10  Accuracy 91.71\n",
+      "Epoch 0078  Loss 0.09  Accuracy 91.75\n",
+      "Epoch 0079  Loss 0.08  Accuracy 91.81\n",
+      "Epoch 0080  Loss 0.09  Accuracy 91.77\n",
+      "Epoch 0081  Loss 0.08  Accuracy 91.82\n",
+      "Epoch 0082  Loss 0.08  Accuracy 91.86\n",
+      "Epoch 0083  Loss 0.07  Accuracy 91.90\n",
+      "Epoch 0084  Loss 0.06  Accuracy 92.00\n",
+      "Epoch 0085  Loss 0.07  Accuracy 92.00\n",
+      "Epoch 0086  Loss 0.05  Accuracy 92.01\n",
+      "Epoch 0087  Loss 0.06  Accuracy 91.96\n",
+      "Epoch 0088  Loss 0.06  Accuracy 91.97\n",
+      "Epoch 0089  Loss 0.06  Accuracy 92.07\n",
+      "Epoch 0090  Loss 0.04  Accuracy 92.15\n",
+      "Epoch 0091  Loss 0.04  Accuracy 92.06\n",
+      "Epoch 0092  Loss 0.04  Accuracy 91.99\n",
+      "Epoch 0093  Loss 0.04  Accuracy 92.07\n",
+      "Epoch 0094  Loss 0.03  Accuracy 92.12\n",
+      "Epoch 0095  Loss 0.03  Accuracy 92.20\n",
+      "Epoch 0096  Loss 0.02  Accuracy 92.25\n",
+      "Epoch 0097  Loss 0.02  Accuracy 92.09\n",
+      "Epoch 0098  Loss 0.02  Accuracy 92.13\n",
+      "Epoch 0099  Loss 0.02  Accuracy 92.06\n",
+      "Epoch 0100  Loss 0.01  Accuracy 92.05\n",
+      "--------------------------------------------------------------------------------\n",
+      "✅ Training completed! Results saved to /storage/coda1/p-vzikas3/0/ywei368/Yu-Project/Auditing/lira_attack/logs/exp/cifar10/experiment-3_16\n"
      ]
     }
    ],
